--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,9 @@ spring.datasource.url=jdbc:h2:mem:grawards;
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
+
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
 spring.sql.init.mode=always
 
