--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.show-sql=true
 
 #liquibase
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
+server.port=8080
+server.address=0.0.0.0
